--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,4 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context=".DetailActivity" tools:ignore="MergeRootFrame" />
+    tools:context="com.sunshine.DetailActivity" tools:showIn="@layout/activity_detail" tools:ignore="MergeRootFrame" >
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/tvDetails"/>
+</FrameLayout>
