added Map and Share Functionality

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -9,7 +9,7 @@
         android:inputType="text"
         android:maxLines="1"/>
     <ListPreference
-        android:key="pref_syncConnectionType"
+        android:key="temp"
         android:title="Temps"
         android:dialogTitle="Temperature Units"
         android:entries="@array/temp_types"
